========================
   beancount: CHANGES
========================
Note: This file contains a list changes in the 'default' branch.


2018-08-26

  - Implementation of beancount.ingest.regression_pytest, a pytest replacement
    for beancount.ingest.regression, which was for nose. This is simpler and
    better and more straightforward (no conditionals; all regression files must
    have all accompanying expect files and all must pass). See the module
    docstring for new instructions on how to use this.

    This should not break the older tests, as I haven't changed the older
    support. It (beancount.ingest.regression) will be removed eventually.

    (This completes porting Beancount to use pytest instead of nosetests.)


2018-08-25

  - Today we're switching to pytest as the official test runner. All the tests
    pass, and it even runs faster. It's about time!

  - Removed all references and workaround to nose.


2018-08-23

  - Oops... removing forgotten trace in bean-web.

  - Fixed #325: Implemented support for including encrypted files (for Milind Kamble
    and using some of this changes).


2018-08-17

  - Added 'issuer' column to the export script. I'm going to use this to produce
    a deaggregated list of exposure to individual stocks from a list of ETFs.


2018-08-25

  - Upgrade requirement to bison-3.0.5 for development.


2018-08-12

  - After many years of using something like it to track my investment portfolio
    using a Google Sheets doc, I cleaned up, rewrote and move the asset list
    exporting script to beancount.projects.export and deleted the old version
    under experiments/upload.


2018-08-05

  - Fixed #322: Adjustments to StopIteration treatment from within generators
    were breaking bean-example generation code.

  - Implemented a new plugin which asserts that on accounts with 'NONE' booking
    method reducing postings' cost basis is within the vicinity of the average